# cpp-for-a-physicist

./: .gitignore  README.md
00-vscode/: README.md
02-build-systems/: README.md
03-libraries/dynamic/: Makefile  greet.cpp
03-libraries/static/: Makefile
06-python/direct/: README.md  foomodule.cpp  test_manual.py
1-hello-world/: Makefile  README.md  main.cpp
10-extra/: CMakeLists.txt  README.md  main.cpp
2-build-systems/: README.md
2-build-systems/cmake/: CMakeLists.txt  README.md
2-build-systems/make/: README.md
3-libraries/: README.md
3-libraries/dynamic/: greet.h
3-libraries/static/: main.cpp
4-old-vs-new/: README.md
5-dependencies/: CMakeLists.txt  README.md  main.cpp
6-python/: README.md
6-python/direct/: README.md  setup.py  test_install.py
9-resources/: README.md
